objects/PC_Pharmacy_Referral__c.object
<CustomObject>
    <description>The PC_Pharmacy_Referral__c is a custom object in Patient Connect used to store referrals for pharmacy.</description>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Last_Refill_Date__c</fullName>
        <description>Date when patient last refilled their prescription</description>
        <label>Last Refill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACLS_Next_Refill_Date__c</fullName>
        <description>Date when patient will next refill their prescription</description>
        <label>Next Refill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_End_Date__c</fullName>
        <description>The date when the pharmacy referral expires.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The patient account associated with a specific pharmacy referral.</description>
        <label>Patient</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <infoMessage>You can only associate patient accounts to a referral. Search results only display patient accounts.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>PC_Pharmacy_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The prescription associated with a specific pharmacy referral.</description>
        <label>Prescription</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Prescription does not exist or is not active.</errorMessage>
            <filterItems>
                <field>PC_Prescription__c.PC_Rx_Status__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>PC_Prescription__c.PC_Program_Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.PC_Program__c</valueField>
            </filterItems>
            <infoMessage>You can only associate active prescriptions to a referral. Search results only display active prescription.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PC_Prescription__c</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>PC_Pharmacy_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Prior_Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The prior authorization case associated with a specific pharmacy referral.</description>
        <label>Prior Authorization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.PC_Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.PC_Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <infoMessage>Prior Authorization does not exist on the current program.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>Pharmacy_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program coverage associated with a specific pharmacy referral.</description>
        <label>Program Coverage</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Coverage does not exist or is not active.</errorMessage>
            <filterItems>
                <field>PC_Program_Coverage__c.PC_Coverage_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>PC_Program_Coverage__c.PC_Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.PC_Program__c</valueField>
            </filterItems>
            <infoMessage>You can only associate active program coverage to a referral. Search results only display active program coverage.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PC_Program_Coverage__c</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>Pharmacy_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program case associated with a specific pharmacy referral.</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Program does not exist or is not a program case.</errorMessage>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <infoMessage>You can only associate program case to a referral. Search results only display program cases.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>PC_Pharmacy_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Reason_Code__c</fullName>
        <description>Reason for referral status change if Canceled, Discontinued or Error.</description>
        <label>Reason Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Referral_Status__c</fullName>
        <description>The status of the pharmacy referral.
Started -&gt;Ready to Send -&gt; Sent -&gt; Active --&gt; Closed/Discontinued/Canceled/Error</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <default>true</default>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Ready to Send</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Source__c</fullName>
        <description>The name of the source who originated the pharmacy referral process.</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Start_Date__c</fullName>
        <description>The date when the pharmacy referral starts.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Target_Pharmacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The pharmacy account to which the pharmacy referral is routed to.</description>
        <label>Target Pharmacy</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmacy Referrals</relationshipLabel>
        <relationshipName>PC_PharmacyReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pharmacy Referral</label>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Pharmacy Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PC_EndDateLesserThanStartDate</fullName>
        <active>true</active>
        <description>Validates that a custom field called End Date does not come before another custom field called Start Date.</description>
        <errorConditionFormula>PC_End_Date__c &lt;  PC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>PC_End_Date__c</errorDisplayField>
        <errorMessage>End Date has to be later than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_ValidateTargetPharmacyTypeAndStatus</fullName>
        <active>true</active>
        <description>Validates that account selected in PC_Target_Pharmacy field is of type Pharmacy and is active</description>
        <errorConditionFormula>IF(PC_Target_Pharmacy__c &lt;&gt; null, OR(TEXT(PC_Target_Pharmacy__r.Type) &lt;&gt; &apos;Pharmacy&apos; ,  TEXT(PC_Target_Pharmacy__r.PC_Status__c) &lt;&gt; &apos;Active&apos;), false)</errorConditionFormula>
        <errorDisplayField>PC_Target_Pharmacy__c</errorDisplayField>
        <errorMessage>Selected account should be of type Pharmacy and should be active</errorMessage>
    </validationRules>
</CustomObject>